# TRKFLYAI

./: .gitignore  DEPLOYMENT.md  start-frontend.js
.claude/: launch.json  settings.local.json
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/: .env.example  .gitignore  ARCHITECTURE.md  pyproject.toml
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/alembic/: alembic.ini
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/: config.py  dependencies.py  main.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/agents/: base.py  conversation.py  knowledge.py  memory_recall.py  personality.py  supervisor.py  task_execution.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/llm/: claude_adapter.py  gateway.py  openai_adapter.py  token_budget.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/memory/: consolidation.py  embeddings.py  episodic.py  long_term.py  manager.py  working.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/models/: conversation.py  database.py  memory.py  twin.py  user.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/personality/: engine.py  rules.py  style.py  traits.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/app/schemas/: auth.py  chat.py  memory.py  twin.py
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/docker/: Dockerfile  docker-compose.yml
Desktop/AI Digital Twin System/.claude/worktrees/bold-archimedes/tests/: conftest.py
(+140 files in other folders)
